--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -13,6 +13,7 @@
   --light-gray: #aaaaaa;
   --dark-gray: #333333;
   --ruby: #aa3b33;
+  --candy-apple: #e3132c;
 
   /* color aliases */
   --background: var(--white);
@@ -43,7 +44,6 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
-  font-family: 'Cinzel', serif;
 }
 
 select.form-control,
@@ -53,6 +53,12 @@ input.form-control {
 }
 input[type='file'] {
   width: 100%;
+}
+
+a {
+  font-weight: 800;
+  color: var(--black);
+  text-decoration: none;
 }
 
 @media (min-width: 0px) {
