--- a/src/view/layouts/StandardLayout/styles.module.css
+++ b/src/view/layouts/StandardLayout/styles.module.css
@@ -1,8 +1,80 @@
 .root {
+  display: flex;
   width: 100%;
   min-height: 100vh;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-items: center;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  flex: 0;
+  width: 100%;
+  background: var(--black);
+  color: var(--white);
+}
+
+.row1 {
+  display: flex;
+  flex-direction: row;
+}
+
+.logo {
+  flex: 0;
+  margin-right: 20px;
+  padding: 20px 0px 10px 20px;
+  font-size: 30px;
+  font-weight: 800;
+  color: var(--candy-apple);
+  filter: drop-shadow(2px 2px 10px var(--light-gray));
+}
+
+.details {
+  flex: 1;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  align-items: right;
+  justify-items: right;
+}
+
+.menu li a {
+  flex: 0;
+  padding: 5px;
+  border-top: 1px solid var(--light-gray);
+  border-right: 1px solid var(--light-gray);
+  color: var(--light-gray);
+  font-size: 10px;
+  line-height: 20px;
+}
+
+.menu li a:hover {
+  background: var(--dark-gray);
+}
+
+.body {
+  display: flex;
+  flex: 1;
+  width: 100%;
+  background: var(--light-gray);
+}
+
+.bodyContents {
+  width: 100%;
+  padding: 20px 10px;
+}
+
+.footer {
+  display: flex;
+  flex: 0;
+  width: 100%;
+  min-height: 30px;
+  background: var(--dark-gray);
 }
